# piam

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  site-deploy.sh
.cargo/: config.toml
assets/: accounts.json  groups.json  policies.Condition.json  policies.ObjectStorage.json  user_group_relationships.json  users.json
ci/: autochangelog.sh
crates/busylib/: Cargo.toml
crates/busylib/src/: config.rs  crypto.rs  lib.rs  logger.rs  prelude.rs
crates/patsnap-constants/: Cargo.toml
crates/patsnap-constants/src/: lib.rs
crates/piam-common/: Cargo.toml
crates/piam-common/src/: config.rs  encrypt.rs  lib.rs  logger.rs
crates/piam-core/: Cargo.toml
crates/piam-core/src/: account.rs  amz_canonical_request.rs  condition.rs  config.rs  container.rs  effect.rs  error.rs  group.rs  input.rs  lib.rs  manager_api_constant.rs  policy.rs  principal.rs  relation_model.rs  request.rs  response.rs  rule_api.rs  sign.rs  signature.rs  state.rs  type_alias.rs
crates/piam-core/src/proxy/: container.rs  error.rs  manager_api.rs  mod.rs  policy.rs  request.rs  response.rs  signature.rs  state.rs
crates/piam-manager/: Cargo.toml
crates/piam-manager/src/: config.rs  error.rs  handler.rs  main.rs  persist.rs  store.rs
crates/piam-manager/tests/: iam.rs  root.rs
crates/piam-object-storage/: Cargo.toml
crates/piam-object-storage/src/: config.rs  error.rs  input.rs  lib.rs  parser.rs  parser_cos.rs  parser_s3.rs  policy.rs
crates/piam-proxy/: Cargo.toml
crates/piam-proxy-core/: Cargo.toml
crates/piam-proxy-core/src/: account.rs  amz_canonical_request.rs  condition.rs  config.rs  container.rs  crypto.rs  effect.rs  error.rs  input.rs  lib.rs  manager_api.rs  policy.rs  principal.rs  relation_model.rs  request.rs  response.rs  rule_api.rs  sign.rs  signature.rs  state.rs  type_alias.rs
crates/piam-proxy/src/: config.rs  container.rs  error.rs  lib.rs  manager_api.rs  policy.rs  request.rs  response.rs  signature.rs  state.rs
crates/piam-s3-proxy/: Cargo.toml
crates/piam-s3-proxy/src/: config.rs  error.rs  handler.rs  main.rs  parser.rs  policy.rs  request.rs  uni_key.rs
crates/piam-s3-proxy/tests/: integration.rs
crates/piam-tracing/: Cargo.toml
crates/piam-tracing/src/: logger.rs
crates/s3-proxy/: Cargo.toml  watch.sh
crates/s3-proxy/src/: config.rs  error.rs  handler.rs  main.rs  parser.rs  policy.rs  request.rs  uni_key.rs
crates/s3-proxy/tests/: integration.rs
website/: Caddyfile  README.md  docusaurus.config.js  package.json  pnpm-lock.yaml  sidebars.js
website/docs/: entities.txt  help.txt
website/docs/developer/: _category_.json  intro.md  reference.md  roadmap.md
website/docs/developer/design/: _category_.json  concerns.txt  estimate.md  intro.md
website/docs/developer/design/components/: _category_.json  compliant-proxy.md  factory.md  rule-provider.md
website/docs/developer/design/model/: _category_.json  hierarchy.md  hierarchy.txt
website/docs/developer/design/model/model/: _category_.json  common.md  document.md  object.md  others.md
website/docs/developer/develop/: _category_.json  arch.md  intro.md  new.md  quick_start.md  read_source.md
website/docs/developer/develop/convention/: _category_.json  comment_and_style.md  commit.md  error_handling.md  format.md  workflow.md
website/docs/developer/develop/convention/style/: _category_.json  error_handling.md  naming.md  organize.md
website/docs/feedback/: feedback.md
website/docs/user/: _category_.json  intro.md
website/docs/user/s3/: _category_.json  changelog.md  feat.md  limitation.md  roadmap.md  troubleshooting.md  usage.md
website/src/components/HomepageFeatures/: index.tsx
website/src/pages/: index.tsx
