[package]
name = "patsnap-constants"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
strum_macros = "0.24"
strum = { version = "0.24", features = ["derive"] }
