[package]
name = "piam-core"
version = "0.0.0"
edition = "2021"
description = "Patsnap IAM core"
license = "Apache-2.0 OR MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
aws-sigv4 = { version = "0.48.0" }
aws-smithy-checksums = "0.48.0"
cidr = "0.2.1"
http = "0.2.8"
hyper = { version = "0.14", features = ["full"] }
uuid = { version = "1.1.2", features = ["v4", "serde", "fast-rng", "macro-diagnostics"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0.35"
piam-tracing = { path = "../piam-tracing" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
arc-swap = "1.5.1"
once_cell = "1.15.0"
log = "0.4.17"

[features]
all-policy = ["s3-policy"]
s3-policy = []
