[package]
name = "piam-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
piam-core = { path = "../piam-core" }
busylib = { path = "../busylib" }
axum = { version = "0.6.1", features = ["tokio"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
log = "0.4.17"
redis = "0.22"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
piam-object-storage = { path = "../piam-object-storage" }
patsnap-constants = { path = "../patsnap-constants" }
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
serde_yaml = "0.9"
