[package]
name = "piam-manager"
version = "0.22.0"
edition = "2021"

[dependencies]
piam-core = { path = "../piam-core" }
busylib = { git = "https://github.com/patsnapops/busylib.git", version = "0.1.0" }
axum = { version = "0.6.1" }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
log = "0.4.17"
redis = "0.22"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
serde_json = "1.0.96"

[dev-dependencies]
piam-object-storage = { path = "../piam-object-storage" }
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
serde_yaml = "0.9"

[dev-dependencies.patsnap-constants]
git = "http://git.patsnap.com/devops/patsnap-constants.git"
version = "0.1.1"
