[package]
name = "piam-object-storage"
version = "0.21.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
busylib = { git = "https://github.com/patsnapops/busylib.git", version = "0.1.0" }
piam-core = { path = "../piam-core" }
serde = { version = "1.0", features = ["derive"] }
strum_macros = "0.24"
strum = { version = "0.24", features = ["derive"] }
http = "0.2.8"
serde_urlencoded = "0.7.1"
hyper = "0.14"
serde-xml-rs = "0.6.0"

[dependencies.tokio]
version = "1"
features = ["full"]
optional = true

[features]
# Special requirement for s3 proxy: Using a unified access key (without account code at the end) to
# access buckets across multiple accounts for each user
cos-parser = []
