[package]
name = "piam-proxy-core"
version = "0.1.0"
edition = "2021"
description = "Patsnap IAM proxy core"
license = "Apache-2.0 OR MIT"

[dependencies]
busylib = { path = "../busylib" }
anyhow = "1.0"
aws-sigv4 = "0.48.0"
cidr = { version = "0.2.1", features = ["serde"] }
http = "0.2.8"
hyper = { version = "0.14", features = ["full"] }
uuid = { version = "1.1.2", features = ["v4", "serde", "fast-rng", "macro-diagnostics"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0.35"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
arc-swap = "1.5.1"
once_cell = "1.15.0"
log = "0.4.17"
axum = { version = "0.6.1", features = ["tokio"] }
async-trait = "0.1"

[dependencies.serde-xml-rs]
version = "0.6.0"
optional = true

[features]
aws-xml-response = ["serde-xml-rs"]
