[package]
name = "piam-proxy"
version = "0.20.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piam-core = { path = "../piam-core" }
busylib = { git = "https://github.com/patsnapops/busylib.git", version = "0.1.0" }
arc-swap = { version = "1.5.1" }
once_cell = { version = "1.15.0" }
aws-sigv4 = { version = "0.54.1" }
uuid = { version = "1.1.2", features = ["v4", "serde", "fast-rng", "macro-diagnostics"] }
http = "0.2.8"
hyper = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
log = "0.4.17"
axum = { version = "0.6.1", features = ["tokio"]}
async-trait = "0.1"
itertools = { version = "0.10.5", optional = true }

[dependencies.serde-xml-rs]
version = "0.6.0"
optional = true

[features]
aws-xml-response = ["serde-xml-rs"]
prefilter = ["itertools"]
tencent-signature = []
