[package]
name = "piam-s3-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.0-rc.2"
axum-core = "0.3.0-rc.1"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
log = "0.4.17"
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
piam-proxy-core = { path = "../piam-proxy-core", features = ["s3-policy"] }
piam-tracing = { path = "../piam-tracing" }
http = "0.2.8"
anyhow = "1.0"
serde_urlencoded = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
arc-swap = "1.5.1"
once_cell = "1.15.0"

[dependencies.aws-sdk-s3]
version = "0.18.0"
optional = true

[dependencies.aws-types]
version = "0.48.0"
optional = true

[dependencies.aws-config]
version = "0.48.0"
optional = true

[dependencies.aws-smithy-client]
version = "0.48.0"
optional = true

[dependencies.futures]
version = "0.3.24"
optional = true

[features]
integration-test = [
    "aws-sdk-s3",
    "aws-types",
    "aws-config",
    "aws-smithy-client",
    "futures",
]
