[package]
name = "piam-s3-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.0-rc.2"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
log = "0.4.17"
piam-proxy-core = { path = "../piam-proxy-core", features = ["s3-policy", "aws-xml-response"] }
piam-tracing = { path = "../piam-tracing" }
http = "0.2.8"
anyhow = "1.0"
serde_urlencoded = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
arc-swap = "1.5.1"
once_cell = "1.15.0"
strum_macros = "0.24"
strum = { version = "0.24", features = ["derive"] }

[dev-dependencies]
aws-sdk-s3 = "0.18.0"
aws-types = "0.48.0"
aws-config = "0.48.0"
aws-smithy-client = "0.48.0"
futures = "0.3.24"
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
