[package]
name = "piam-tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
tracing = "0.1.35"
tracing-appender = "0.2.2"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.15", features = ["json", "local-time", "std"] }
time = "0.3.14"
