[package]
name = "s3-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
patsnap-constants = { path = "../patsnap-constants", optional = true }
piam-core = { path = "../piam-core", features = ["aws-xml-response"] }
piam-object-storage = { path = "../piam-object-storage" }
busylib = { path = "../busylib" }
axum = { version = "0.6.1", features = ["tokio"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http = "0.2.8"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
arc-swap = "1.5.1"
once_cell = "1.15.0"
async-trait = "0.1"
aws-sdk-s3 = { version = "0.18.0", optional = true }
aws-types = { version = "0.48.0", features = ["hardcoded-credentials"], optional = true }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"], optional = true }

[dev-dependencies]
aws-config = "0.48.0"
aws-smithy-client = "0.48.0"
futures = "0.3.24"
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }

[features]
# Special requirement for s3 proxy: Using a unified access key (without account code at the end) to
# access buckets across multiple accounts for each user
uni-key = ["aws-sdk-s3", "aws-types", "patsnap-constants", "reqwest"]
